Shards option for TrieMemtable

--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -72,6 +72,8 @@ memtable:
             class_name: SkipListMemtable
         trie:
             class_name: TrieMemtable
+            parameters:
+                shards: 4
         skiplist_sharded:
             class_name: ShardedSkipListMemtable
             parameters:
