--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -68,7 +68,6 @@ row_index_read_size_fail_threshold: 8192KiB
 memtable:
     configurations:
         skiplist:
-            inherits: default
             class_name: SkipListMemtable
         trie:
             class_name: TrieMemtable
@@ -85,7 +84,6 @@ memtable:
         skiplist_remapped:
             inherits: skiplist
         test_fullname:
-            inherits: default
             class_name: org.apache.cassandra.db.memtable.TestMemtable
         test_shortname:
             class_name: TestMemtable
@@ -109,3 +107,5 @@ memtable:
             class_name: org.apache.cassandra.cql3.validation.operations.CreateTest$InvalidMemtableFactoryMethod
         test_invalid_factory_field:
             class_name: org.apache.cassandra.cql3.validation.operations.CreateTest$InvalidMemtableFactoryField
+# Note: keep the memtable configuration at the end of the file, so that the default mapping can be changed without
+# duplicating the whole section above.
