--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -529,8 +529,8 @@ concurrent_materialized_view_writes: 32
 # accepting writes when the limit is exceeded until a flush completes,
 # and will trigger a flush based on memtable_cleanup_threshold
 # If omitted, Cassandra will set both to 1/4 the size of the heap.
-# memtable_heap_space_in_mb: 2048
-# memtable_offheap_space_in_mb: 2048
+memtable_heap_space_in_mb: 5120
+memtable_offheap_space_in_mb: 5120
 
 # memtable_cleanup_threshold is deprecated. The default calculation
 # is the only reasonable choice. See the comments on  memtable_flush_writers
@@ -543,7 +543,7 @@ concurrent_materialized_view_writes: 32
 # under heavy write load.
 #
 # memtable_cleanup_threshold defaults to 1 / (memtable_flush_writers + 1)
-# memtable_cleanup_threshold: 0.11
+memtable_cleanup_threshold: 0.9
 
 # Specify the way Cassandra allocates and manages memtable memory.
 # Options are:
@@ -1544,3 +1544,4 @@ enable_drop_compact_storage: false
   # Default -1 to disable and use the physically available disk size of data directories during calculations.
   # may differ if emulate_dbaas_defaults is enabled
   # disk_usage_max_disk_size_in_gb: -1
+disk_access_mode: mmap
